--- a/src/components/PropertyCard/PropertyCard.scss
+++ b/src/components/PropertyCard/PropertyCard.scss
@@ -1,20 +1,35 @@
 .PropertyCard {
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 1fr;
     border: 1px solid #dfdfe1;
     border-radius: 4px;
     margin: 1rem;
     box-shadow: 0 3px 3px -3px rgba(0, 0, 0, 0.3);
 
+    @media (min-width: 768px) {
+        grid-template-columns: 300px 1fr;
+    }
+
     .ImageAndPrice {
         background: #f4f4f5;
 
         .image {
-            width: 300px;
+            width: 100%;
             height: 200px;
+
+            @media (min-width: 768px) {
+                width: 300px;
+            }
+
             img {
                 width: 100%;
-                height: auto;
+                height: 100%;
+                object-fit: cover;
+
+                @media (min-width: 768px) {
+
+                    height: 100%;
+                }
             }
         }
 
@@ -44,28 +59,50 @@
         }
 
         .summary {
-            height: 92px;
-            max-height: 92px;
-            margin-bottom: 1.5rem;
             overflow: hidden;
+            
+            @media (min-width: 768px) {
+                height: 92px;
+                max-height: 92px;
+                margin-bottom: 1.5rem;
+            }
         }
 
         .agentInfo {
-            padding: 21px 1rem;
+            padding: 12px 1rem;
             position: relative;
 
             span {
-                position: absolute;
-                font-size: 2.5rem;
+                font-size: 2rem;
                 top: 6px;
                 left: 1rem;
                 text-shadow: 0 0 0 #262637;
+
+                @media (min-width: 768px) {
+                    font-size: 2.5rem;
+                }
+    
             }
 
             a {
+                display: flex;
+                place-items: center;
+                @media (min-width: 768px) {
+                    padding: 0;
+                }
+            }
+            
+            a > p {
                 color: #006653;
-                margin-left: 3.5rem;
+                margin: 0;
+                margin-left: 1rem;
+                padding: 0;
+                width: 100%;
                 text-decoration: none;
+
+                @media (min-width: 768px) {
+                    margin-left: 1rem;
+                }
             }
         }
     }
