--- a/src/components/PropertyListing/PropertyListing.scss
+++ b/src/components/PropertyListing/PropertyListing.scss
@@ -1,5 +1,9 @@
 .PropertyListing {
-    li { 
-        list-style-type: none;
+    ul {
+        padding-left: 0;
+
+        li { 
+            list-style-type: none;
+        }
     }
 }
